[gd_scene load_steps=5 format=3 uid="uid://b4g62d1rnjgie"]

[ext_resource type="Texture2D" uid="uid://cybiex46d2hkn" path="res://Graphics/Particles/BrickBreak.png" id="1_bmdmv"]
[ext_resource type="Script" uid="uid://be4sfn5yk80g8" path="res://Scripts/Other/bones_particle.gd" id="1_d37ty"]

[sub_resource type="AtlasTexture" id="AtlasTexture_5ojhs"]
atlas = ExtResource("1_bmdmv")
region = Rect2(0, 0, 8, 8)

[sub_resource type="SpriteFrames" id="SpriteFrames_pemqd"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_5ojhs")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[node name="BrickBreakParticle" type="Node2D"]
z_as_relative = false
script = ExtResource("1_d37ty")

[node name="Sprite1" type="AnimatedSprite2D" parent="."]
position = Vector2(0, -8)
sprite_frames = SubResource("SpriteFrames_pemqd")
autoplay = "default"

[node name="Sprite2" type="AnimatedSprite2D" parent="."]
position = Vector2(0, -8)
sprite_frames = SubResource("SpriteFrames_pemqd")
autoplay = "default"

[node name="Sprite3" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_pemqd")
autoplay = "default"

[node name="Sprite4" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_pemqd")
autoplay = "default"

[node name="ParticleTime" type="Timer" parent="."]
wait_time = 2.0
one_shot = true
autostart = true

[connection signal="timeout" from="ParticleTime" to="." method="_on_particle_time_timeout"]
